--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
     <div class="off-canvas">
       <figure class="avatar">
-        <img src="{{ site.baseurl }}/Users/Noah%20Hunt-Isaak/Pictures/Screenshots/Colorful%20Tendrils%20Sketch.PNG" alt="Picture" title="Image I made">
+        <img src="/Users/Noah%20Hunt-Isaak/Pictures/Screenshots/Colorful%20Tendrils%20Sketch.PNG" alt="Picture" title="Image I made">
       </figure>
       <div class="bio">
           <h1>Hi, I'm {{ site.author }}.</h1>
