1st try to change CV link to Studiosketchpad link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
           {% if site.linkedin %}
            <li><a target="_blank" href="https://linkedin.com/in/{{ site.linkedin }}">LinkedIn</a></li>
           {% endif %}
-          <li><a target ="_blank" href="{{ site.baseurl }}/assets/files/CV.pdf">CV</a></li>
+          <li><a target ="_blank" href="{{ site.baseurl }}/assets/files/CV.pdf">StudioSketchPad</a></li>
         </ul>
       </nav>
     </div>
