--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
           {% if site.linkedin %}
            <li><a target="_blank" href="https://linkedin.com/in/{{ site.linkedin }}">LinkedIn</a></li>
           {% endif %}
-          <li><a target ="_blank" href="{{ site.baseurl }}/assets/files/CV.pdf">StudioSketchPad</a></li>
+          <li><a target ="_blank" href="http://studio.sketchpad.cc/sp/padlist/edited-by?editorId=21077">StudioSketchPad</a></li>
         </ul>
       </nav>
     </div>
